Fixed card min card width error on smaller devices

--- a/src/app/pages/main-news/main-news.component.scss
+++ b/src/app/pages/main-news/main-news.component.scss
@@ -387,7 +387,9 @@ main {
                             }
                         }
                     }
-                    // mat-card-content{}
+                    mat-card-content{
+                        min-width: 80% !important;
+                    }
                 }
             }
         }
